src/objects/Snomed_Code__c.object
<CustomObject>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Snomed Codes</relationshipLabel>
        <relationshipName>Snomed_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Master</label>
        <referenceTo>Code_Master__c</referenceTo>
        <relationshipLabel>Snomed Codes</relationshipLabel>
        <relationshipName>Snomed_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_System_Version__c</fullName>
        <label>Code System Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_System__c</fullName>
        <label>Code System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composition_2__c</fullName>
        <label>Composition 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_Value__c</fullName>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Snomed Codes</relationshipLabel>
        <relationshipName>Snomed_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>caIntegratorValue__c</fullName>
        <label>caIntegratorValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>snomed_Code_Name__c</fullName>
        <description>This is custom field for storing snomed code name. Earlier we were storing code name in standard &quot;Name&quot; field but that only contains 80 characters. Thats why we created this field.</description>
        <label>snomed Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Snomed Code</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Snomed Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snomed Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>